--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,7 +6,6 @@
 image: node:6.9.4
 clone:
   depth: full
-
 pipelines:
   default:
     - step:
@@ -14,4 +13,5 @@ pipelines:
           - node
         script: # Modify the commands below to build your repository.
         - npm install
+        - npm test
         - git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git HEAD:master
