--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -12,6 +12,6 @@ pipelines:
         caches:
           - node
         script: # Modify the commands below to build your repository.
-        - npm install
+        - npm install npm@6.4.1 node@8.12.0
         - npm test
         - git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git HEAD:master
