--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/compiler": "~7.0.0",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/core": "~7.0.0",
+    "@angular/fire": "^5.1.0",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
     "@angular/platform-browser": "~7.0.0",
@@ -26,6 +27,7 @@
     "@angular/router": "~7.0.0",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
+    "firebase": "^5.5.9",
     "path": "^0.12.7",
     "rxjs": "~6.3.3",
     "typescript": "~3.1.6",
