--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@tinymce/tinymce-angular": "^3.0.0",
     "angularfire2": "^5.1.1",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "firebase": "^5.7.0",
     "path": "^0.12.7",
     "rxjs": "~6.3.3",
+    "tinymce": "^5.0.0",
     "typescript": "~3.1.6",
     "zone.js": "~0.8.26"
   },
